# satel_integra

./: .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  requirements_tests.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: changelog.yml  ci.yml  dev.yml  release-drafter.yml  release.yml
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: basic.py  encryption.py  monitoring.py
satel_integra/: __init__.py  cli.py  commands.py  connection.py  const.py  encryption.py  exceptions.py  messages.py  queue.py  satel_integra.py  transport.py  utils.py
satel_integra/models/: __init__.py  device.py  firmware.py  module.py  output.py  panel.py  partition.py  temperature.py  zone.py
satel_integra2/: __init__.py  cli.py  encryption.py
tests/: __init__.py  test_connection.py  test_encryption.py  test_messages.py  test_models.py  test_queue.py  test_satel_integra.py  test_transport.py  test_utils.py
